# Codici_Tesi

./: README.md
Python/: Event_reader.py  IMU_filter.py  IMU_reader.py  IMU_utils.py  KLT_tracker.py  VIO.py  arc_star_detector.py  calibration_matrix.py  inverse_depth.py  plot_imu_timeseries.py  plot_utils.py  ransac_utils.py  time_surface.py  window_utils.py
Unreal Engine/: PROXSIMA.code-workspace  PROXSIMA.uproject
Unreal Engine/Examples/: pyproject.toml
Unreal Engine/Examples/Assets/: Rover.fmu  Rover.mo  SMS_model.fmu  SMS_model_fmu.mo
Unreal Engine/Examples/closed_loop/: Simulation_Marco.json  closed_loop_csv.json  closed_loop_gnc.json  externalGNC.py  inputs_fmu_20250313.mat
Unreal Engine/Examples/closed_loop/Trajectory Generation/: linear.py  traj_final.py  trajectory.py  trajectory_new.py
Unreal Engine/Examples/ondemand_mode/: README.md  ondemand_config.json  test.py
Unreal Engine/Examples/sequence_mode/: README.md  TROUBLESHOOTING.md  camera_poses.json  sequence_config.json
Unreal Engine/Source/: PROXSIMA.Target.cs  PROXSIMAEditor.Target.cs
Unreal Engine/Source/PROXSIMA/: PROXSIMA.Build.cs  PROXSIMA.cpp
Unreal Engine/Source/PROXSIMA/Private/: PROXSIMAGameInstance.cpp  PROXSIMAGameMode.cpp  WebSocketManager.cpp
Unreal Engine/Source/PROXSIMA/Private/FMUhandling/: FMUComponent.cpp  FMUConfiguration.cpp  FMUInputDataStructures.cpp  FMUIntegration.cpp  FMUModelDescription.cpp  OnDemandCaptureManager.cpp  SequenceManager.cpp
Unreal Engine/Source/PROXSIMA/Public/: PROXSIMAGameInstance.h  PROXSIMAGameMode.h  WebSocketManager.h
(+43 files in other folders)
