[project]
name = "prox-sima-experimental"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "pillow>=11.3.0",
    "websockets>=15.0.1",
]
